--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,17 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
+  google_sign_in: ^6.3.0
+  provider: ^6.1.4 
   cupertino_icons: ^1.0.8
   async: ^2.12.0
   fake_async: ^1.3.2
   leak_tracker: ^10.0.8
   material_color_utilities: ^0.11.1
   vm_service: ^14.3.1
+  fluttertoast: ^8.2.12
+  pie_chart: ^5.4.0 
+  fl_chart: ^0.71.0
   
 dev_dependencies:
   flutter_test:
@@ -26,3 +31,14 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/spendwise_logo.png
+    - assets/images/google_logo.png
+    - assets/images/income_expenses_icon.png
+    - assets/images/budget_planning_icon.png
+    - assets/images/smart_spending_icon.png
+    - assets/images/receipt_ocr_icon.png
+    - assets/images/subscription_tracking_icon.png
+    - assets/images/financial_goals_icon.png
+    - assets/images/data_visualization_icon.png
