--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.12.1
-  firebase_auth: ^5.5.1
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.17.5
   google_sign_in: ^6.3.0
   provider: ^6.1.4 
   cupertino_icons: ^1.0.8
@@ -20,9 +21,15 @@ dependencies:
   leak_tracker: ^10.0.8
   material_color_utilities: ^0.11.1
   vm_service: ^14.3.1
-  fluttertoast: ^8.2.12
+  fluttertoast: ^8.2.8
   pie_chart: ^5.4.0 
-  fl_chart: ^0.71.0
+  fl_chart: ^0.63.0
+  intl: ^0.20.2
+  google_mlkit_text_recognition: ^0.11.0
+  image_picker: ^1.0.4
+  path_provider: ^2.1.2
+
+
   
 dev_dependencies:
   flutter_test:
