--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.32.0
-  firebase_auth: ^4.16.0
-  cloud_firestore: ^4.17.5
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
+  cloud_firestore: ^5.6.7
   google_sign_in: ^6.3.0
   provider: ^6.1.4 
   cupertino_icons: ^1.0.8
@@ -23,11 +23,14 @@ dependencies:
   vm_service: ^14.3.1
   fluttertoast: ^8.2.8
   pie_chart: ^5.4.0 
-  fl_chart: ^0.63.0
-  intl: ^0.20.2
-  google_mlkit_text_recognition: ^0.11.0
+  fl_chart: ^0.71.0
+  intl: 0.17.0
+  google_mlkit_text_recognition: ^0.15.0
   image_picker: ^1.0.4
   path_provider: ^2.1.2
+  js: ^0.7.2
+  charts_flutter: ^0.12.0
+
 
 
   
